crates/gpui_tea/tests/ui/child_without_model.stderr
error[E0277]: the trait bound `Child: Model` is not satisfied
  --> tests/ui/child_without_model.rs:17:10
   |
17 | #[derive(Composite)]
   |          ^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Model` is not implemented for `Child`
  --> tests/ui/child_without_model.rs:15:1
   |
15 | struct Child;
   | ^^^^^^^^^^^^
   = note: this error originates in the derive macro `Composite` (in Nightly builds, run with -Z macro-backtrace for more info)
